# cusb

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yaml
inc/cusb/: configuration.h  cusbd.h  descriptors.h  device.h  endpoint.h  interface.h  string.h
src/: configuration.c  cusbd.c  device.c  dummy.c  endpoint.c  interface.c  string.c
tests/unit/: CMakeLists.txt
tests/unit/src/: main.cpp  test_dummy.cpp
